# plant-system

./: .gitignore  CMakeLists.txt  README.md  partitions_master.csv  partitions_slave.csv  platformio.ini  sdkconfig.defaults
lib/ble_protocol/: ble_protocol.h
lib/config_store/: config_store.c
src/main/: CMakeLists.txt  config_store.h  main.c
src/master/: CMakeLists.txt  main.c
src/slave/: main.c
